fixed the spacing for post titles on landing

--- a/public/css/Landing.css
+++ b/public/css/Landing.css
@@ -136,7 +136,7 @@ body {
 /* Post Top Bar */
 .post-topbar {
     display: grid;
-    grid-template-columns: 1fr auto; 
+    grid-template-columns: 60% auto; 
     align-items: center;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.05); 
